formatted the user/login page, aligning the form and buttons correctly. Added the google logo to the sign in with google button.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -105,13 +105,13 @@ a:hover {
 }
 
 /* Forms */
-input[type="text"], input[type="email"], input[type="password"], textarea {
+/*input[type="text"], input[type="email"], input[type="password"], textarea {
   width: 25%;
   padding: 10px;
   margin: 10px 0;
   border: 1px solid #007acc;
   border-radius: 5px;
-}
+}*/
 
 input[type="submit"] {
   background-color: #007acc;
